cluster_script/debug/single.6159975.err
  File "single_submit.py", line 13
    print(f"Command {command} started successfully.")
  File "single_submit.py", line 13
    print(f"Command {command} started successfully.")
                                                   ^
SyntaxError: invalid syntax
                                                   ^
SyntaxError: invalid syntax
  File "single_submit.py", line 13
    print(f"Command {command} started successfully.")
                                                   ^
SyntaxError: invalid syntax
  File "single_submit.py", line 13
    print(f"Command {command} started successfully.")
                                                   ^
SyntaxError: invalid syntax
srun: error: c198-112: tasks 0-3: Exited with exit code 1
